SAM-1645
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@106520 66ffb92e-73f9-0310-93c1-f5514f145a0a